// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<InputNumberController /> Component renders correctly: RenderWithPlaceholder 1`] = `
<DocumentFragment>
  <div
    class="chakra-form-control css-1kxonj9"
    role="group"
  >
    <label
      class="css-mimi7r"
    >
      <span
        class="css-1e9661m"
        id="label"
      >
        Hello*
      </span>
      <div
        class="chakra-input__group css-pwmwmr"
        data-group="true"
      >
        <input
          class="chakra-input css-nkgdpn"
          data-testid="test"
          id="field-:r0:"
          inputmode="numeric"
          name="test"
          placeholder="Hello"
          type="text"
          value=""
        />
      </div>
    </label>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<InputNumberController /> Show error at bottom: RenderWithInvalid 1`] = `
<DocumentFragment>
  <div
    class="chakra-form-control css-1kxonj9"
    role="group"
  >
    <label
      class="css-mimi7r"
    >
      <span
        class="css-1e9661m"
        id="label"
      >
        Hello*
      </span>
      <div
        class="chakra-input__group css-pwmwmr"
        data-group="true"
      >
        <input
          aria-describedby="field-:r3:-feedback"
          aria-invalid="true"
          class="chakra-input css-ybk3ki"
          data-testid="test"
          id="field-:r3:"
          inputmode="numeric"
          name="test"
          placeholder="Hello"
          type="text"
          value=""
        />
        <div
          class="chakra-input__right-element css-1akgnmh"
        >
          <div
            class="css-k008qs"
            data-testid="input-error-icon"
          >
            <div
              class="css-amv3mm"
            >
              <svg
                class="chakra-icon css-1j9mq94"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="0 0 256 256"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M128,24A104,104,0,1,0,232,128,104.11,104.11,0,0,0,128,24Zm-8,56a8,8,0,0,1,16,0v56a8,8,0,0,1-16,0Zm8,104a12,12,0,1,1,12-12A12,12,0,0,1,128,184Z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </label>
    <div
      aria-live="polite"
      class="chakra-form__error-message css-e4t7bs"
      data-testid="form-error-message"
      id="field-:r3:-feedback"
    >
      This field is required
    </div>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;
